--- a/praticahtmlecss/faleconosco.html
+++ b/praticahtmlecss/faleconosco.html
@@ -14,7 +14,7 @@
      </header>
      <nav>
         <!--A tag "a" cria um hiperlink para outro arquivo(local), outro site (externo) ou algum local da própria página (interno) a tag "div"ou seção em uma agina html, o elemento "div" é frequentemente utlizado como conteiner para outros elementos-->
-        <a href=".html"><div class="opcao"> Início</div></a>
+        <a href="index.html"><div class="opcao"> Início</div></a>
         <a href="Produtos.html"><div class="opcao">Geladeiras e freezers</div></a>
         <a href="faleconosco.html"><div class="opcao">Fale Conosco</div></a>
 
